app/eventyay/static/pretixcontrol/scss/_forms.scss
.help-block {
  color: $text-muted;
}

td > .form-group {
  margin-bottom: 0;
}

td > .errorlist {
  color: #a94442;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

td > .form-group > .checkbox {
  margin-top: 0;
  margin-bottom: 0;
}

.static-form-row {
  padding-top: 7px;
}

.has-success .form-control {
  border-color: #cccccc;
}

.panel-body div.alert:last-child {
  margin-bottom: 0;
}

.form-group.disabled {
  opacity: 0.5;
}

.form-horizontal [data-formset] .form-group {
  width: 100%;
}

[data-formset] .form-group:not([data-formset-form-deleted]):last-of-type [data-formset-move-down-button],
[data-formset] .form-group:not([data-formset-form-deleted]):first-of-type [data-formset-move-up-button] {
  cursor: not-allowed;
  pointer-events: none; // Future-proof disabling of clicks
  @include opacity(.65);
  @include box-shadow(none);
}

div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], div[data-nested-formset-body] {
  width: 100%;
}

.form-plugins .panel-title {
  line-height: 34px;
}

.restriction-formset .variations label {
  margin: 0;
}

.formset-row {
  margin-bottom: 10px;
}

.submit-group {
  margin: 15px 0 0 0 !important;
  padding: 15px;
  background: #eeeeee;
  text-align: right;
  .btn-save {
    // btn-lg
    @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $btn-border-radius-large);
  }
  .btn-cancel {
    float: left !important;
    background:  #ffffff;
    color: #db2828;
    border: 1px solid #db2828;
    // btn-lg
    @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $btn-border-radius-large);
  }
  
}

.panel .form-group:last-child {
  margin-bottom: 0;
}

.tabbed-form > .tab-pane {
  padding: 10px;

  & > h4 {
    // like bs3 legend
    display: block;
    width: 100%;
    padding: 0;
    margin-bottom: $line-height-computed;
    font-size: ($font-size-base * 1.5);
    line-height: inherit;
    color: $legend-color;
    border: 0;
    border-bottom: 1px solid $legend-border-color;
  }
}

.nav-tabs {
  border-bottom: 0px solid #ddd;
}

.tab-content {
    border: 1px solid #ddd;
    border-radius: 0px 5px 5px 5px;
    padding: 20px;
}

.mail-preview-group {
  margin-bottom: -15px;
}

.variation-matrix {
  td .form-group, .checkbox {
    margin: 0;
  }
}

.table-quotas td ul {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
  margin-bottom: 0;
}

#answer-options .answer-options-group {
  margin-bottom: 0;

  > .control-label {
    padding-top: 4px;
  }
}

#answer-options .question-option-item {
  margin-bottom: 12px;

  &:last-child {
    margin-bottom: 0;
  }
}

#answer-options .question-option-label {
  font-size: $font-size-small;
  color: $text-muted;
  margin-bottom: 4px;
}

#answer-options .question-option-row {
  display: flex;
  align-items: flex-start;
  gap: 8px;
}

#answer-options .question-option-field {
  flex: 1 1 0;
  min-width: 0;

  .form-group {
    margin-bottom: 0;
    width: 100%;
  }

  .i18n-form-group {
    width: 100%;
  }

  input,
  textarea {
    width: 100%;
    box-sizing: border-box;
  }
}

#answer-options .question-option-actions {
  flex: 0 0 auto;
  padding-top: 7px;
  white-space: nowrap;

  .btn + .btn {
    margin-left: 4px;
  }
}

#answer-options .question-option-add {
  margin-top: 10px;
}

#answer-options .answer-options-after-gap {
  min-height: 10px;
}

.i18n-form-group input,
.i18n-form-group textarea {
  @include border-top-radius(0px);
  @include border-bottom-radius(0px);
  border-top-width: 0;

  &:first-child {
    @include border-top-radius($input-border-radius);
    border-top-width: 1px;
  }
  &:last-child {
    @include border-bottom-radius($input-border-radius);
  }
}

.colorpicker-preview-group {
  display: flex;
  align-items: center;
  width: 100%;
  position: relative;
}

.colorpicker-preview {
  display: inline-block;
  width: $input-height-base;
  height: $input-height-base;
  border: 1px solid #d4d4d5;
  border-right: 0;
  border-radius: $input-border-radius 0 0 $input-border-radius;
  background-color: #ffffff;
  box-sizing: border-box;
  flex-shrink: 0;
}

.colorpicker-preview.is-empty {
  background-image: repeating-linear-gradient(45deg, #f5f5f5, #f5f5f5 8px, #ffffff 8px, #ffffff 16px);
}

.colorpicker-preview-group .form-control.colorpickerfield {
  flex: 1 1 auto;
  width: auto;
  border-radius: 0 $input-border-radius $input-border-radius 0;
  border-left: 0;
}

@media (min-width: $screen-sm-min) {
  .variation-matrix > tbody > tr > td {
    line-height: 34px;

    input[type=checkbox] {
      margin-top: 10px;
    }
  }
}
.ticketoutput-panel .panel-title {
  line-height: 30px;
}

div.mail-preview {
  border: 1px solid #ccc;
  border-top-width: 1px;
  border-radius: 3px;

  .placeholder {
    background: transparentize($brand-warning, 0.6);
  }
}

.mail-preview-group div[lang] {
  @include border-top-radius(0px);
  @include border-bottom-radius(0px);
  border-top-width: 0;
  margin-bottom: 0;
  padding-right: 15px;
  padding-bottom: 15px;

  &:first-child {
    @include border-top-radius($input-border-radius);
    border-top-width: 1px;
  }
  &:last-child {
    @include border-bottom-radius($input-border-radius);
    margin-bottom: 20px;
  }
  h2, h3 {
    margin-bottom: 20px;
    margin-top: 10px;
  }
  p {
    margin: 0 0 10px;

    /* These are technically the same, but use both */
    overflow-wrap: break-word;
    word-wrap: break-word;

    -ms-word-break: break-all;
    /* This is the dangerous one in WebKit, as it breaks things wherever */
    word-break: break-all;
    /* Instead use this non-standard one: */
    word-break: break-word;

    /* Adds a hyphen where the word breaks, if supported (No Blink) */
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
  }
  p:last-child {
    margin-bottom: 0;
  }
}
/* ... */

